Fixed Overflow Issues(Web/Mobile View) / Updated Animations

--- a/public/style.css
+++ b/public/style.css
@@ -32261,6 +32261,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.wrapped-body{
+  overflow-x: hidden;
+}
+
 /* Certificate Properties */
 
 .image-property {
